Set fine-grained domains instead of wildcard